--- a/re-inspire.csproj
+++ b/re-inspire.csproj
@@ -6,5 +6,7 @@
   <ItemGroup>
     <PackageReference Include="MySqlConnector" Version="1.0.1"/>
     <PackageReference Include="Dapper" Version="2.0.35"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.8"/>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Cors" Version="5.2.7"/>
   </ItemGroup>
 </Project>
