--- a/wwwsrc/package.json
+++ b/wwwsrc/package.json
@@ -9,11 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
-    "bootswatch": "^4.5.2",
     "bootstrap": "^4.5.0",
+    "bootswatch": "^4.5.2",
+    "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
-    "core-js": "^3.6.5",
     "scss": "^0.2.4",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
